getting started with the structure

--- a/index.html
+++ b/index.html
@@ -69,9 +69,14 @@
             </div>
             <div class="contact__info">
                 <h2>Contact Info</h2>
+                <div class="email-contact">
+                    <p>eddygarage2024@gmail.com</p>
+                    <p>+1 (555) 123-4567</p>
+                </div>
             </div>
           </div>
         </div>
+        <button>Send Message</button>
       </section>
       <section></section>
       <section></section>
