getting started with the structure

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
           <img src="images/right image.png" alt="" />
         </aside>
       </section>
+      <section>
+        
+      </section>
       <section class="sign-up-page">
         <h2>Sign Up Here</h2>
         <input type="text" placeholder="Your name..." />
