--- a/index.html
+++ b/index.html
@@ -48,8 +48,39 @@
           <img src="images/right image.png" alt="" />
         </aside>
       </section>
-      <section>
-        
+      <section class="about__page">
+        <aside>
+          <p>
+            Welcome to Eddy’s garage, where passion meets precision in every
+            mile. As car enthusiasts ourselves, we understand the thrill of the
+            open road and the importance of finding the perfect vehicle to
+            complement your lifestyle. At Eddy's garage, we are committed to
+            delivering excellence in every aspect of our service. From our
+            carefully curated selection of top-quality vehicles to our dedicated
+            team of automotive experts, we strive to exceed your expectations at
+            every turn. With years of industry experience, we have built a
+            reputation for integrity, transparency, and customer satisfaction.
+            Whether you're searching for a sleek sedan, a rugged SUV, or a
+            high-performance sports car, we have the perfect vehicle to suit
+            your needs
+          </p>
+        </aside>
+        <aside>
+          <p>
+            But we're more than just a car dealership – we're a community of car
+            enthusiasts united by our love for the open road. Join us on our
+            journey as we continue to redefine the automotive experience and
+            inspire drivers to chase their automotive dreams. Discover the
+            difference at Eddy’s garage. Your journey starts here.
+          </p>
+          <p>
+            Thank you for choosing Eddy's garage as your trusted
+            automotive partner. We are honored to be a part of your journey, and
+            we look forward to exceeding your expectations every step of the
+            way. Drive with confidence, adventure with style, and experience the
+            difference with Eddy's garage
+          </p>
+        </aside>
       </section>
       <section class="sign-up-page">
         <h2>Sign Up Here</h2>
@@ -66,16 +97,22 @@
           <h1>Get In Touch</h1>
           <div class="contact__box">
             <div class="input__area">
-                <input type="text">
-                <input type="email">
-                <textarea name="" id="" cols="30" rows="10" placeholder="Type your message here"></textarea>
+              <input type="text" />
+              <input type="email" />
+              <textarea
+                name=""
+                id=""
+                cols="30"
+                rows="10"
+                placeholder="Type your message here"
+              ></textarea>
             </div>
             <div class="contact__info">
-                <h2>Contact Info</h2>
-                <div class="email-contact">
-                    <p>eddygarage2024@gmail.com</p>
-                    <p>+1 (555) 123-4567</p>
-                </div>
+              <h2>Contact Info</h2>
+              <div class="email-contact">
+                <p>eddygarage2024@gmail.com</p>
+                <p>+1 (555) 123-4567</p>
+              </div>
             </div>
           </div>
         </div>
