--- a/index.html
+++ b/index.html
@@ -49,38 +49,108 @@
         </aside>
       </section>
       <section class="about__page">
-        <aside>
-          <p>
-            Welcome to Eddy’s garage, where passion meets precision in every
-            mile. As car enthusiasts ourselves, we understand the thrill of the
-            open road and the importance of finding the perfect vehicle to
-            complement your lifestyle. At Eddy's garage, we are committed to
-            delivering excellence in every aspect of our service. From our
-            carefully curated selection of top-quality vehicles to our dedicated
-            team of automotive experts, we strive to exceed your expectations at
-            every turn. With years of industry experience, we have built a
-            reputation for integrity, transparency, and customer satisfaction.
-            Whether you're searching for a sleek sedan, a rugged SUV, or a
-            high-performance sports car, we have the perfect vehicle to suit
-            your needs
-          </p>
-        </aside>
-        <aside>
-          <p>
-            But we're more than just a car dealership – we're a community of car
-            enthusiasts united by our love for the open road. Join us on our
-            journey as we continue to redefine the automotive experience and
-            inspire drivers to chase their automotive dreams. Discover the
-            difference at Eddy’s garage. Your journey starts here.
-          </p>
-          <p>
-            Thank you for choosing Eddy's garage as your trusted
-            automotive partner. We are honored to be a part of your journey, and
-            we look forward to exceeding your expectations every step of the
-            way. Drive with confidence, adventure with style, and experience the
-            difference with Eddy's garage
-          </p>
-        </aside>
+        <div class="about-intro-text">
+          <h1>About Us</h1>
+          <aside>
+            <p>
+              Welcome to Eddy’s garage, where passion meets precision in every
+              mile. As car enthusiasts ourselves, we understand the thrill of
+              the open road and the importance of finding the perfect vehicle to
+              complement your lifestyle. At Eddy's garage, we are committed to
+              delivering excellence in every aspect of our service. From our
+              carefully curated selection of top-quality vehicles to our
+              dedicated team of automotive experts, we strive to exceed your
+              expectations at every turn. With years of industry experience, we
+              have built a reputation for integrity, transparency, and customer
+              satisfaction. Whether you're searching for a sleek sedan, a rugged
+              SUV, or a high-performance sports car, we have the perfect vehicle
+              to suit your needs
+            </p>
+          </aside>
+          <aside>
+            <p>
+              But we're more than just a car dealership – we're a community of
+              car enthusiasts united by our love for the open road. Join us on
+              our journey as we continue to redefine the automotive experience
+              and inspire drivers to chase their automotive dreams. Discover the
+              difference at Eddy’s garage. Your journey starts here.
+            </p>
+            <p>
+              Thank you for choosing Eddy's garage as your trusted automotive
+              partner. We are honored to be a part of your journey, and we look
+              forward to exceeding your expectations every step of the way.
+              Drive with confidence, adventure with style, and experience the
+              difference with Eddy's garage
+            </p>
+          </aside>
+        </div>
+        <img src="images/Rectangle 12.png" alt="" />
+        <div class="about__body">
+          <h1>Our Company Values</h1>
+          <div class="box-one">
+            <img src="images/image 7.png" alt="" />
+            <div class="reliant__text">
+              <h2>Reliant</h2>
+              <p>
+                Dependable, Durable, and Distinctive - That's Reliance Cars.
+                From the Daily Commute to the Great Escapes, Trust in Our
+                Quality Craftsmanship and Unwavering Performance. Experience the
+                Confidence of Reliance, Where Every Journey is an Adventure
+                Worth Taking.
+              </p>
+            </div>
+          </div>
+          <div class="box-two">
+            <div class="unique__text">
+              <h2>Unique</h2>
+              <p>
+                At Eddy’s Garage, we celebrate individuality and embrace the
+                uniqueness of every driver. Just like you, our vehicles are not
+                merely modes of transportation; they are reflections of
+                personality, style, and passion. From custom paint jobs to
+                personalized interiors, we offer endless possibilities to make
+                your vehicle truly one-of-a-kind. Experience the freedom to
+                express yourself on the road and discover the true meaning of
+                automotive excellence with Eddy’s garage
+              </p>
+            </div>
+          </div>
+          <div class="box-three">
+            <div class="creative__text">
+              <h2>Creative</h2>
+              <p>
+                At Eddy’s Garage, creativity fuels our drive. From concept to
+                creation, we infuse every vehicle with innovative design,
+                cutting-edge technology, and forward-thinking engineering. Our
+                team of designers, engineers, and artisans collaborate
+                tirelessly to push the boundaries of automotive excellence and
+                bring your wildest automotive dreams to life. Experience the
+                intersection of artistry and performance with Eddy’s garage,
+                where every car is a masterpiece waiting to be unleashed on the
+                open road.
+              </p>
+            </div>
+          </div>
+          <div class="ending__text">
+            <p>
+              In conclusion, Eddy's Garage isn't just about selling cars; it's
+              about fostering a community of passionate drivers who appreciate
+              the craftsmanship, creativity, and uniqueness that defines our
+              vehicles. With Eddy's Garage, every journey becomes an opportunity
+              to express your individuality and unleash your adventurous spirit.
+              Thank you for considering Eddy's Garage for your automotive needs.
+              Let's rev up the engine and embark on this exhilarating ride
+              together.
+            </p>
+          </div>
+        </div>
+        <footer class="about__footer">
+            <i class="fa-brands fa-x-twitter"></i>
+            <i class="fa-brands fa-linkedin"></i>
+            <i class="fa-brands fa-discord"></i>
+            <i class="fa-brands fa-whatsapp"></i>
+            <i class="fa-brands fa-instagram"></i>
+        </footer>
       </section>
       <section class="sign-up-page">
         <h2>Sign Up Here</h2>
@@ -90,6 +160,11 @@
         <div class="checkbox__container">
           <input type="checkbox" />
           <label for="checkbox">Remember Me</label>
+        </div>
+      </section>
+      <section class="service__page">
+        <div class="service__wrapper">
+            
         </div>
       </section>
       <section class="contact__page">
