--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/main.css" />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -10,12 +12,14 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Leckerli+One&family=Mochiy+Pop+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+
     <title>Car Sales</title>
   </head>
   <body>
@@ -48,6 +52,7 @@
           <img src="images/right image.png" alt="" />
         </aside>
       </section>
+
       <section class="about__page">
         <div class="about-intro-text">
           <h1>About Us</h1>
@@ -145,13 +150,14 @@
           </div>
         </div>
         <footer class="about__footer">
-            <i class="fa-brands fa-x-twitter"></i>
-            <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-discord"></i>
-            <i class="fa-brands fa-whatsapp"></i>
-            <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-x-twitter"></i>
+          <i class="fa-brands fa-linkedin"></i>
+          <i class="fa-brands fa-discord"></i>
+          <i class="fa-brands fa-whatsapp"></i>
+          <i class="fa-brands fa-instagram"></i>
         </footer>
       </section>
+
       <section class="sign-up-page">
         <h2>Sign Up Here</h2>
         <input type="text" placeholder="Your name..." />
@@ -162,11 +168,58 @@
           <label for="checkbox">Remember Me</label>
         </div>
       </section>
+
       <section class="service__page">
         <div class="service__wrapper">
-            
+          <div class="card card__one">
+            <img src="images/image 1.png" alt="" />
+            <h3>Ferrari</h3>
+            <p>
+              "Elevate Your Drive: Ferrari [Model]. Unmatched Power, Yours
+              Awaits!"
+            </p>
+          </div>
+          <div class="card card__two">
+            <img src="images/image 2.png" alt="" />
+            <h3>Audi</h3>
+            <p>
+              "Elevate Your Drive: Audi [Model]. Unmatched Power, Yours Awaits!"
+            </p>
+          </div>
+          <div class="card card__three">
+            <img src="images/image 3.png" alt="" />
+            <h3>Bentley</h3>
+            <p>
+              "Elevate Your Drive: Bentley [Model]. Unmatched Power, Yours
+              Awaits!"
+            </p>
+          </div>
+          <div class="card card__four">
+            <img src="images/image 4.png" alt="" />
+            <h3>Chevrolet</h3>
+            <p>
+              "Elevate Your Drive: Chevrolet [Model]. Unmatched Power, Yours
+              Awaits!"
+            </p>
+          </div>
+          <div class="card card__five">
+            <img src="images/image 5.png" alt="" />
+            <h3>Ford</h3>
+            <p>
+              "Elevate Your Drive: Ford [Model]. Unmatched Power, Yours Awaits!"
+            </p>
+          </div>
+          <div class="card card__six">
+            <img src="images/image 6.png" alt="" />
+            <h3>Nissan</h3>
+            <p>
+              "Elevate Your Drive: Nissan [Model]. Unmatched Power, Yours
+              Awaits!"
+            </p>
+          </div>
         </div>
       </section>
+
       <section class="contact__page">
         <div class="contact__wrapper">
           <h1>Get In Touch</h1>
@@ -193,8 +246,7 @@
         </div>
         <button>Send Message</button>
       </section>
-      <section></section>
-      <section></section>
+
     </main>
   </body>
 </html>
