about page done✅

--- a/index.html
+++ b/index.html
@@ -23,237 +23,236 @@
     <title>Car Sales</title>
   </head>
   <body>
-    <main>
-      <section class="hero-page">
-        <header>
-          <nav>
-            <div class="header__logo">
-              <img
-                src="images/logo.png"
-                alt="check internet..."
-                class="header__image"
-              />
-            </div>
-            <ul>
-              <li><a href="">Home</a></li>
-              <li><a href="">About</a></li>
-              <li><a href="">Contact</a></li>
-              <li><a href="">Services</a></li>
-              <li>
-                <a href="">Sign up <i class="fa-solid fa-angle-down"></i></a>
-              </li>
-            </ul>
-          </nav>
-        </header>
-        <div class="hero__main">
-          <aside class="right__aside">
-            <h1>Welcome To Eddy’s Garage</h1>
-            <p>
-              Rev Up Your Ride with Our Ultimate Car Destination! Explore the
-              Thrill of Speed, Luxury, and Performance. From Classic Beauties to
-              Cutting-Edge Innovations, Discover Your Dream Drive Today!
-            </p>
-            <button>Let’s Go</button>
-          </aside>
-          <aside class="left__aside">
-            <img src="images/right image.png" alt="" />
-          </aside>
-        </div>
-      </section>
+    <section class="hero-page">
+      <header>
+        <nav>
+          <div class="header__logo">
+            <img
+              src="images/logo.png"
+              alt="check internet..."
+              class="header__image"
+            />
+          </div>
+          <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Services</a></li>
+            <li>
+              <a href="">Sign up <i class="fa-solid fa-angle-down"></i></a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <div class="hero__main">
+        <aside class="right__aside">
+          <h1>Welcome To Eddy’s Garage</h1>
+          <p>
+            Rev Up Your Ride with Our Ultimate Car Destination! Explore the
+            Thrill of Speed, Luxury, and Performance. From Classic Beauties to
+            Cutting-Edge Innovations, Discover Your Dream Drive Today!
+          </p>
+          <button>Let’s Go</button>
+        </aside>
+        <aside class="left__aside">
+          <img src="images/right image.png" alt="" />
+        </aside>
+      </div>
+    </section>
 
-      <section class="about__page">
-        <div class="about-intro-text">
-          <h1>About Us</h1>
-          <aside>
+    <section class="about__page">
+      <div class="about-us">
+        <h1>About Us</h1>
+      </div>
+      <div class="about-intro-text">
+        <aside class="one">
+          <p>
+            Welcome to Eddy’s garage, where passion meets precision in every
+            mile. As car enthusiasts ourselves, we understand the thrill of the
+            open road and the importance of finding the perfect vehicle to
+            complement your lifestyle. At Eddy's garage, we are committed to
+            delivering excellence in every aspect of our service. From our
+            carefully curated selection of top-quality vehicles to our dedicated
+            team of automotive experts, we strive to exceed your expectations at
+            every turn. With years of industry experience, we have built a
+            reputation for integrity, transparency, and customer satisfaction.
+            Whether you're searching for a sleek sedan, a rugged SUV, or a
+            high-performance sports car, we have the perfect vehicle to suit
+            your needs
+          </p>
+        </aside>
+        <aside class="two">
+          <p class="two__one">
+            But we're more than just a car dealership – we're a community of car
+            enthusiasts united by our love for the open road. Join us on our
+            journey as we continue to redefine the automotive experience and
+            inspire drivers to chase their automotive dreams. Discover the
+            difference at Eddy’s garage. Your journey starts here.
+          </p>
+          <p class="two__two">
+            Thank you for choosing Eddy's garage as your trusted automotive
+            partner. We are honored to be a part of your journey, and we look
+            forward to exceeding your expectations every step of the way. Drive
+            with confidence, adventure with style, and experience the difference
+            with Eddy's garage
+          </p>
+        </aside>
+      </div>
+      <img src="images/Rectangle 12.png" alt="" class="long-image"/>
+      <div class="about__body">
+        <h1>Our Company Values</h1>
+        <div class="box-one">
+          <img src="images/image 7.1.png" alt="" />
+          <div class="reliant__text">
+            <h2>Reliant</h2>
             <p>
-              Welcome to Eddy’s garage, where passion meets precision in every
-              mile. As car enthusiasts ourselves, we understand the thrill of
-              the open road and the importance of finding the perfect vehicle to
-              complement your lifestyle. At Eddy's garage, we are committed to
-              delivering excellence in every aspect of our service. From our
-              carefully curated selection of top-quality vehicles to our
-              dedicated team of automotive experts, we strive to exceed your
-              expectations at every turn. With years of industry experience, we
-              have built a reputation for integrity, transparency, and customer
-              satisfaction. Whether you're searching for a sleek sedan, a rugged
-              SUV, or a high-performance sports car, we have the perfect vehicle
-              to suit your needs
-            </p>
-          </aside>
-          <aside>
-            <p>
-              But we're more than just a car dealership – we're a community of
-              car enthusiasts united by our love for the open road. Join us on
-              our journey as we continue to redefine the automotive experience
-              and inspire drivers to chase their automotive dreams. Discover the
-              difference at Eddy’s garage. Your journey starts here.
-            </p>
-            <p>
-              Thank you for choosing Eddy's garage as your trusted automotive
-              partner. We are honored to be a part of your journey, and we look
-              forward to exceeding your expectations every step of the way.
-              Drive with confidence, adventure with style, and experience the
-              difference with Eddy's garage
-            </p>
-          </aside>
-        </div>
-        <img src="images/Rectangle 12.png" alt="" />
-        <div class="about__body">
-          <h1>Our Company Values</h1>
-          <div class="box-one">
-            <img src="images/image 7.png" alt="" />
-            <div class="reliant__text">
-              <h2>Reliant</h2>
-              <p>
-                Dependable, Durable, and Distinctive - That's Reliance Cars.
-                From the Daily Commute to the Great Escapes, Trust in Our
-                Quality Craftsmanship and Unwavering Performance. Experience the
-                Confidence of Reliance, Where Every Journey is an Adventure
-                Worth Taking.
-              </p>
-            </div>
-          </div>
-          <div class="box-two">
-            <div class="unique__text">
-              <h2>Unique</h2>
-              <p>
-                At Eddy’s Garage, we celebrate individuality and embrace the
-                uniqueness of every driver. Just like you, our vehicles are not
-                merely modes of transportation; they are reflections of
-                personality, style, and passion. From custom paint jobs to
-                personalized interiors, we offer endless possibilities to make
-                your vehicle truly one-of-a-kind. Experience the freedom to
-                express yourself on the road and discover the true meaning of
-                automotive excellence with Eddy’s garage
-              </p>
-            </div>
-          </div>
-          <div class="box-three">
-            <div class="creative__text">
-              <h2>Creative</h2>
-              <p>
-                At Eddy’s Garage, creativity fuels our drive. From concept to
-                creation, we infuse every vehicle with innovative design,
-                cutting-edge technology, and forward-thinking engineering. Our
-                team of designers, engineers, and artisans collaborate
-                tirelessly to push the boundaries of automotive excellence and
-                bring your wildest automotive dreams to life. Experience the
-                intersection of artistry and performance with Eddy’s garage,
-                where every car is a masterpiece waiting to be unleashed on the
-                open road.
-              </p>
-            </div>
-          </div>
-          <div class="ending__text">
-            <p>
-              In conclusion, Eddy's Garage isn't just about selling cars; it's
-              about fostering a community of passionate drivers who appreciate
-              the craftsmanship, creativity, and uniqueness that defines our
-              vehicles. With Eddy's Garage, every journey becomes an opportunity
-              to express your individuality and unleash your adventurous spirit.
-              Thank you for considering Eddy's Garage for your automotive needs.
-              Let's rev up the engine and embark on this exhilarating ride
-              together.
+              Dependable, Durable, and Distinctive - That's Reliance Cars. From
+              the Daily Commute to the Great Escapes, Trust in Our Quality
+              Craftsmanship and Unwavering Performance. Experience the
+              Confidence of Reliance, Where Every Journey is an Adventure Worth
+              Taking.
             </p>
           </div>
         </div>
-        <footer class="about__footer">
-          <i class="fa-brands fa-x-twitter"></i>
-          <i class="fa-brands fa-linkedin"></i>
-          <i class="fa-brands fa-discord"></i>
-          <i class="fa-brands fa-whatsapp"></i>
-          <i class="fa-brands fa-instagram"></i>
-        </footer>
-      </section>
+        <div class="box-two">
+          <div class="unique__text">
+            <h2>Unique</h2>
+            <p>
+              At Eddy’s Garage, we celebrate individuality and embrace the
+              uniqueness of every driver. Just like you, our vehicles are not
+              merely modes of transportation; they are reflections of
+              personality, style, and passion. From custom paint jobs to
+              personalized interiors, we offer endless possibilities to make
+              your vehicle truly one-of-a-kind. Experience the freedom to
+              express yourself on the road and discover the true meaning of
+              automotive excellence with Eddy’s garage
+            </p>
+          </div>
+          <img src="images/image 7.png" alt="">
+        </div>
+        <div class="box-three">
+          <img src="images/Rectangle 11.png" alt="">
+          <div class="creative__text">
+            <h2>Creative</h2>
+            <p>
+              At Eddy’s Garage, creativity fuels our drive. From concept to
+              creation, we infuse every vehicle with innovative design,
+              cutting-edge technology, and forward-thinking engineering. Our
+              team of designers, engineers, and artisans collaborate tirelessly
+              to push the boundaries of automotive excellence and bring your
+              wildest automotive dreams to life. Experience the intersection of
+              artistry and performance with Eddy’s garage, where every car is a
+              masterpiece waiting to be unleashed on the open road.
+            </p>
+          </div>
+        </div>
+        <div class="ending__text">
+          <p>
+            In conclusion, Eddy's Garage isn't just about selling cars; it's
+            about fostering a community of passionate drivers who appreciate the
+            craftsmanship, creativity, and uniqueness that defines our vehicles.
+            With Eddy's Garage, every journey becomes an opportunity to express
+            your individuality and unleash your adventurous spirit. Thank you
+            for considering Eddy's Garage for your automotive needs. Let's rev
+            up the engine and embark on this exhilarating ride together.
+          </p>
+        </div>
+      </div>
+      <footer class="about__footer">
+        <i class="fa-brands fa-x-twitter"></i>
+        <i class="fa-brands fa-linkedin"></i>
+        <i class="fa-brands fa-discord"></i>
+        <i class="fa-brands fa-whatsapp"></i>
+        <i class="fa-brands fa-instagram"></i>
+      </footer>
+    </section>
 
-      <section class="sign-up-page">
-        <h2>Sign Up Here</h2>
-        <input type="text" placeholder="Your name..." />
-        <input type="email" placeholder="Your email..." />
-        <input type="country" placeholder="Your country" />
-        <div class="checkbox__container">
-          <input type="checkbox" />
-          <label for="checkbox">Remember Me</label>
-        </div>
-      </section>
+    <section class="sign-up-page">
+      <h2>Sign Up Here</h2>
+      <input type="text" placeholder="Your name..." />
+      <input type="email" placeholder="Your email..." />
+      <input type="country" placeholder="Your country" />
+      <div class="checkbox__container">
+        <input type="checkbox" />
+        <label for="checkbox">Remember Me</label>
+      </div>
+    </section>
 
-      <section class="service__page">
-        <div class="service__wrapper">
-          <div class="card card__one">
-            <img src="images/image 1.png" alt="" />
-            <h3>Ferrari</h3>
-            <p>
-              "Elevate Your Drive: Ferrari [Model]. Unmatched Power, Yours
-              Awaits!"
-            </p>
-          </div>
-          <div class="card card__two">
-            <img src="images/image 2.png" alt="" />
-            <h3>Audi</h3>
-            <p>
-              "Elevate Your Drive: Audi [Model]. Unmatched Power, Yours Awaits!"
-            </p>
-          </div>
-          <div class="card card__three">
-            <img src="images/image 3.png" alt="" />
-            <h3>Bentley</h3>
-            <p>
-              "Elevate Your Drive: Bentley [Model]. Unmatched Power, Yours
-              Awaits!"
-            </p>
-          </div>
-          <div class="card card__four">
-            <img src="images/image 4.png" alt="" />
-            <h3>Chevrolet</h3>
-            <p>
-              "Elevate Your Drive: Chevrolet [Model]. Unmatched Power, Yours
-              Awaits!"
-            </p>
-          </div>
-          <div class="card card__five">
-            <img src="images/image 5.png" alt="" />
-            <h3>Ford</h3>
-            <p>
-              "Elevate Your Drive: Ford [Model]. Unmatched Power, Yours Awaits!"
-            </p>
-          </div>
-          <div class="card card__six">
-            <img src="images/image 6.png" alt="" />
-            <h3>Nissan</h3>
-            <p>
-              "Elevate Your Drive: Nissan [Model]. Unmatched Power, Yours
-              Awaits!"
-            </p>
-          </div>
+    <section class="service__page">
+      <div class="service__wrapper">
+        <div class="card card__one">
+          <img src="images/image 1.png" alt="" />
+          <h3>Ferrari</h3>
+          <p>
+            "Elevate Your Drive: Ferrari [Model]. Unmatched Power, Yours
+            Awaits!"
+          </p>
         </div>
-      </section>
+        <div class="card card__two">
+          <img src="images/image 2.png" alt="" />
+          <h3>Audi</h3>
+          <p>
+            "Elevate Your Drive: Audi [Model]. Unmatched Power, Yours Awaits!"
+          </p>
+        </div>
+        <div class="card card__three">
+          <img src="images/image 3.png" alt="" />
+          <h3>Bentley</h3>
+          <p>
+            "Elevate Your Drive: Bentley [Model]. Unmatched Power, Yours
+            Awaits!"
+          </p>
+        </div>
+        <div class="card card__four">
+          <img src="images/image 4.png" alt="" />
+          <h3>Chevrolet</h3>
+          <p>
+            "Elevate Your Drive: Chevrolet [Model]. Unmatched Power, Yours
+            Awaits!"
+          </p>
+        </div>
+        <div class="card card__five">
+          <img src="images/image 5.png" alt="" />
+          <h3>Ford</h3>
+          <p>
+            "Elevate Your Drive: Ford [Model]. Unmatched Power, Yours Awaits!"
+          </p>
+        </div>
+        <div class="card card__six">
+          <img src="images/image 6.png" alt="" />
+          <h3>Nissan</h3>
+          <p>
+            "Elevate Your Drive: Nissan [Model]. Unmatched Power, Yours Awaits!"
+          </p>
+        </div>
+      </div>
+    </section>
 
-      <section class="contact__page">
-        <div class="contact__wrapper">
-          <h1>Get In Touch</h1>
-          <div class="contact__box">
-            <div class="input__area">
-              <input type="text" />
-              <input type="email" />
-              <textarea
-                name=""
-                id=""
-                cols="30"
-                rows="10"
-                placeholder="Type your message here"
-              ></textarea>
-            </div>
-            <div class="contact__info">
-              <h2>Contact Info</h2>
-              <div class="email-contact">
-                <p>eddygarage2024@gmail.com</p>
-                <p>+1 (555) 123-4567</p>
-              </div>
+    <section class="contact__page">
+      <div class="contact__wrapper">
+        <h1>Get In Touch</h1>
+        <div class="contact__box">
+          <div class="input__area">
+            <input type="text" />
+            <input type="email" />
+            <textarea
+              name=""
+              id=""
+              cols="30"
+              rows="10"
+              placeholder="Type your message here"
+            ></textarea>
+          </div>
+          <div class="contact__info">
+            <h2>Contact Info</h2>
+            <div class="email-contact">
+              <p>eddygarage2024@gmail.com</p>
+              <p>+1 (555) 123-4567</p>
             </div>
           </div>
         </div>
-        <button>Send Message</button>
-      </section>
-    </main>
+      </div>
+      <button>Send Message</button>
+    </section>
   </body>
 </html>
