--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </p>
         </aside>
       </div>
-      <img src="images/Rectangle 12.png" alt="" class="long-image"/>
+      <img src="images/Rectangle 12.png" alt="" class="long-image" />
       <div class="about__body">
         <h1>Our Company Values</h1>
         <div class="box-one">
@@ -128,10 +128,10 @@
               automotive excellence with Eddy’s garage
             </p>
           </div>
-          <img src="images/image 7.png" alt="">
+          <img src="images/image 7.png" alt="" />
         </div>
         <div class="box-three">
-          <img src="images/Rectangle 11.png" alt="">
+          <img src="images/Rectangle 11.png" alt="" />
           <div class="creative__text">
             <h2>Creative</h2>
             <p>
@@ -168,13 +168,16 @@
     </section>
 
     <section class="sign-up-page">
+      <img src="images/sign-up.png" alt="" />
       <h2>Sign Up Here</h2>
-      <input type="text" placeholder="Your name..." />
-      <input type="email" placeholder="Your email..." />
-      <input type="country" placeholder="Your country" />
-      <div class="checkbox__container">
-        <input type="checkbox" />
-        <label for="checkbox">Remember Me</label>
+      <div class="inputs">
+        <input type="text" placeholder="Your name..." />
+        <input type="email" placeholder="Your email..." />
+        <input type="country" placeholder="Your country" />
+        <div class="checkbox__container">
+          <input type="checkbox" />
+          <label for="checkbox">Remember Me</label>
+        </div>
       </div>
     </section>
 
