done with main left with respinsiveness

--- a/index.html
+++ b/index.html
@@ -234,17 +234,32 @@
     <section class="contact__page">
       <div class="contact__wrapper">
         <h1>Get In Touch</h1>
+        <span
+          style="
+            width: 180px;
+            border-radius: 20px;
+            position: relative;
+            top: -10px;
+            margin-left: 20px;
+            background-color: rgb(190, 187, 206);
+            height: 20px;
+          "
+        ></span>
+        <br />
         <div class="contact__box">
           <div class="input__area">
-            <input type="text" />
+            <input type="text" placeholder="" />
             <input type="email" />
             <textarea
               name=""
               id=""
-              cols="30"
+              cols="22"
               rows="10"
               placeholder="Type your message here"
             ></textarea>
+            <div class="button">
+              <button style="width: 200px; border-radius: 5px; padding: 8px; border: none; color: rgb(25, 219, 25); background-color: black;">Send Message</button>
+            </div>
           </div>
           <div class="contact__info">
             <h2>Contact Info</h2>
@@ -255,7 +270,6 @@
           </div>
         </div>
       </div>
-      <button>Send Message</button>
     </section>
   </body>
 </html>
